--- a/index.html
+++ b/index.html
@@ -212,12 +212,13 @@
     </div>
 
     <div class="textInput-wrapper">
-      <textarea id="linkInput" placeholder="Enter or paste your company link here..."></textarea>
+      <textarea id="linksInput" placeholder="Enter or paste your company link/s here..."></textarea>
     </div>
 
     <div class="generate-ai-main">
       <button onclick="postText()" id="postTextBtn" class="btn-success">🔄 POST LINK</button>
     </div>
   </div>
+  <script src="index.js"></script>
 </body>
 </html>
